--- a/configs/_dataset/fineweb.yaml
+++ b/configs/_dataset/fineweb.yaml
@@ -2,29 +2,15 @@ defaults:
   - default
   - _self_
 
-
 trainer:
   train_dataloader:
-    dataset:
-      _target_: src.core.datasets.C4Dataset
-      sequence_length: ${common.sequence_length}
-      tokenize_fn: Callable,
-      path: ${cluster_switch.train_path_fineweb}
-      split: train
-      seed: 123
-      use_new_sampling_method: true
-      shuffle: true
-      world_size_independent: false
+    datasets:
+      ${cluster_switch.train_path_fineweb}: 1.0
+    dataset_split: train
     num_workers: 2
 
   eval_dataloader:
-      _target_: src.core.datasets.C4Dataset
-      sequence_length: ${common.sequence_length}
-      tokenize_fn: Callable,
-      path: ${cluster_switch.eval_path_fineweb}
-      split: train
-      seed: 123
-      use_new_sampling_method: true
-      shuffle: true
-      world_size_independent: false
+    datasets:
+      ${cluster_switch.eval_path_fineweb}: 1.0
+    dataset_split: train
     num_workers: 2
