--- a/configs/_dataset/smollm_corpus.yaml
+++ b/configs/_dataset/smollm_corpus.yaml
@@ -5,19 +5,32 @@ defaults:
 trainer:
   train_dataloader:
     _target_: src.core.datasets.get_mixture_of_datasets_dataloader
-#    dataset_type: mixture-of-datasets
     datasets:
-      path/to/fineweb-edu-dedup: 0.7
-      path/to/cosmopedia-v2: 0.15
-      path/to/python-edu: 0.08
-      path/to/open-web-math: 0.07
+#      ./data/: 0.77
+#      ./data_eval/: 0.23
+      /storage_nvme_1/llm-random/datasets/fineweb-edu-dedup/train: 0.7
+      /storage_nvme_1/llm-random/datasets/cosmopedia-v2/train: 0.15
+      /storage_nvme_2/llm-random/datasets/python-edu: 0.08
+      /storage_nvme_2/llm-random/datasets/open-web-math/train: 0.07
     dataset_split: train
-    num_workers: 8
+#    num_workers: 8
+    num_workers: 2
     tokenize_fn:
-      _target_: src.core.datasets.smollm_1700_tokenize_fn
+      _target_: src.core.datasets.get_tokenize_fn
+      model_name: HuggingFaceTB/SmolLM-1.7B
 
   eval_dataloader:
-    dataset_path: data_eval
+    _target_: src.core.datasets.get_mixture_of_datasets_dataloader
+    datasets:
+#      ./data/: 0.77
+#      ./data_eval/: 0.23
+      /storage_nvme_1/llm-random/datasets/fineweb-edu-dedup/train: 0.7
+      /storage_nvme_1/llm-random/datasets/cosmopedia-v2/train: 0.15
+      /storage_nvme_2/llm-random/datasets/python-edu: 0.08
+      /storage_nvme_2/llm-random/datasets/open-web-math/train: 0.07
     dataset_split: validation
-    dataset_type: c4
-    num_workers: 8
+#    num_workers: 8
+    num_workers: 1
+    tokenize_fn:
+      _target_: src.core.datasets.get_tokenize_fn
+      model_name: HuggingFaceTB/SmolLM-1.7B
