--- a/configs/tiny_remote.yaml
+++ b/configs/tiny_remote.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - _cluster@_here_: entropy_a100
+  - _cluster@_here_: lem
   - _model@_here_: tiny
   - _trainer@_here_: llama
   - _dataset@_here_: c4
@@ -33,7 +33,7 @@ infrastructure:
 
   slurm:
     time: "00:10:00"
-    gres: gpu:1
+    gres: gpu:hopper:1
     job-name: ${infrastructure.metric_logger.name}
 
 evaluator:
