--- a/configs/tiny_remote_ctx_scl.yaml
+++ b/configs/tiny_remote_ctx_scl.yaml
@@ -1,36 +1,42 @@
 defaults:
-  - _cluster@_here_: local
+  - _cluster@_here_: entropy
   - _model@_here_: tiny
   - _trainer@_here_: context_scaling
-  - _dataset@_here_: local_dummy
+  - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
   - _eval@_here_: none
   - _self_
 
 common:
-  sequence_length: 16
-  batch_size: 2
+  sequence_length: 512
+  batch_size: 32
 
 trainer:
   gradient_accumulation_steps: 1
-  n_steps: 100
-  ^learning_rate: [1e-3, 2e-3, 5e-3]
-  eval_interval: 10
+  n_steps: 101
+  learning_rate: 2e-3
+  eval_interval: 20
   eval_long_ctx_interval: 20
 
   eval_long_ctx_dataloader:
-    dataset_path: data_long_ctx
-    num_workers: 1
+    dataset_path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
+    num_workers: 16
     total_batch_size: 32
     tokenize_fn: 
       _target_: src.core.datasets.gpt2_tokenize_fn
 
 infrastructure:
   metric_logger:
-    name: tiny_Local
+    name: tiny_remote
     tags:
       - nano
-      - local
+      - remote
       - tiny
       - context_scaling
+      - "1712"
+
+  slurm:
+    time: "00:10:00"
+    gres: gpu:1
+    job-name: ${infrastructure.metric_logger.name}
