update relevant configs

--- a/configs/pc_project/llmr_800.yaml
+++ b/configs/pc_project/llmr_800.yaml
@@ -33,12 +33,14 @@ trainer:
   distributed: null
 
   train_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.gpt2_tokenize_fn
 
   eval_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.gpt2_tokenize_fn
 
 
 infrastructure:
