--- a/configs/pc_project/llmr_300.yaml
+++ b/configs/pc_project/llmr_300.yaml
@@ -38,8 +38,9 @@ trainer:
   distributed: null
 
   train_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.gpt2_tokenize_fn
 
   eval_dataloader:
     tokenize_fn: 
