--- a/configs/pc_project/llmr_800_comp.yaml
+++ b/configs/pc_project/llmr_800_comp.yaml
@@ -40,8 +40,9 @@ trainer:
     path: ??? # CHANGE
 
   train_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.gpt2_tokenize_fn
 
   eval_dataloader:
     tokenize_fn: 
