--- a/configs/pc_project/llmr_800_prune.yaml
+++ b/configs/pc_project/llmr_800_prune.yaml
@@ -45,12 +45,14 @@ trainer:
     path: ??? # CHANGE
 
   train_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.gpt2_tokenize_fn
 
   eval_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.gpt2_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.gpt2_tokenize_fn
 
 
 infrastructure:
