--- a/configs/pc_project/smollm_135.yaml
+++ b/configs/pc_project/smollm_135.yaml
@@ -34,12 +34,14 @@ trainer:
     path: null #change
 
   train_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.smollm_135_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.smollm_135_tokenize_fn
 
   eval_dataloader:
-    tokenize_fn: 
-      _target_: src.core.datasets.smollm_135_tokenize_fn
+    dataset:
+      tokenize_fn: 
+        _target_: src.core.datasets.smollm_135_tokenize_fn
 
 
 infrastructure:
