--- a/configs/_trainer/pc_llama.yaml
+++ b/configs/_trainer/pc_llama.yaml
@@ -25,10 +25,12 @@ trainer:
         - ${model.head._target_}
   
   train_dataloader:
-    tokenize_fn:
-      _target_: src.core.datasets.llama_tokenize_fn
+    dataset:
+      tokenize_fn:
+        _target_: src.core.datasets.llama_tokenize_fn
       
 
   eval_dataloader:
-    tokenize_fn:
-      _target_: src.core.datasets.llama_tokenize_fn
+    dataset:
+      tokenize_fn:
+        _target_: src.core.datasets.llama_tokenize_fn
