--- a/configs/tiny_remote_ctx_scl.yaml
+++ b/configs/tiny_remote_ctx_scl.yaml
@@ -20,12 +20,22 @@ trainer:
   eval_long_ctx_interval: 20
 
   eval_long_ctx_dataloader:
-    num_workers: 16
-    total_batch_size: 32
+    _target_: src.core.datasets.get_dataloader
     dataset:
-      path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
-      tokenize_fn: 
-        _target_: src.core.datasets.gpt2_tokenize_fn
+      _target_: src.context_scaling.WholeDocumentDataset
+      base_dataset:
+        _target_: src.core.datasets.C4Dataset
+        sequence_length: ${common.sequence_length}
+        path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
+        split: validation
+        seed: 123
+        use_new_sampling_method: true
+        shuffle: true
+        world_size_independent: false
+        tokenize_fn: 
+          _target_: src.core.datasets.gpt2_tokenize_fn
+    num_workers: 8
+    total_batch_size: ${common.batch_size}
 
 infrastructure:
   metric_logger:
