change trainer in configs/pc_project to pc_llama

--- a/configs/pc_project/llama_8B_comp.yaml
+++ b/configs/pc_project/llama_8B_comp.yaml
@@ -1,7 +1,7 @@
 defaults:
   - ../_cluster@_here_: entropy
   - ../_model/llama@_here_: projected_8B
-  - ../_trainer@_here_: llama
+  - ../_trainer@_here_: pc_llama
   - ../_dataset@_here_: fineweb
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
