--- a/configs/pc_project/llama_1B_to_hf_conversion.yaml
+++ b/configs/pc_project/llama_1B_to_hf_conversion.yaml
@@ -1,7 +1,7 @@
 defaults:
   - ../_cluster@_here_: entropy
   - ../_model@_here_: llama_3_1
-  - ../_trainer@_here_: llama
+  - ../_trainer@_here_: pc_llama
   - ../_dataset@_here_: c4 # not used - loads slower
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
