--- a/configs/pc_project/smollm_360_comp.yaml
+++ b/configs/pc_project/smollm_360_comp.yaml
@@ -1,7 +1,7 @@
 defaults:
   - ../_cluster@_here_: entropy
   - ../_model/smollm@_here_: projected_360
-  - ../_trainer@_here_: llama
+  - ../_trainer@_here_: pc_llama
   - ../_dataset@_here_: fineweb
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
