--- a/configs/tiny_remote.yaml
+++ b/configs/tiny_remote.yaml
@@ -5,7 +5,7 @@ defaults:
   - _dataset@_here_: c4
   - _checkpoints@_here_: none
   - _misc@_here_: default
-  - _eval@_here_: default
+  - _eval@_here_: basic
 
 common:
   sequence_length: 128
