--- a/configs/tiny_remote_ctx_scl.yaml
+++ b/configs/tiny_remote_ctx_scl.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - _cluster@_here_: entropy
+  - _cluster@_here_: helios
   - _model@_here_: tiny
   - _trainer@_here_: context_scaling
   - _dataset@_here_: c4
