mqa mha long runs

--- a/configs/_dataset/ctx_scl_dataset.yaml
+++ b/configs/_dataset/ctx_scl_dataset.yaml
@@ -21,7 +21,7 @@ trainer:
       load_dataset_fn:
         _target_: src.context_scaling.dataset.get_dataset
         _partial_: true
-        path: data
+        path: ${cluster_switch.train_path_c4}
         load_dataset_fn: null
         shuffle: true
 
@@ -43,7 +43,7 @@ trainer:
       load_dataset_fn:
         _target_: src.context_scaling.dataset.get_dataset
         _partial_: true
-        path: data_eval
+        path: ${cluster_switch.eval_path_c4}
         load_dataset_fn: null
         shuffle: true
 
