--- a/configs/ctx_scl_k16_long_mha.yaml
+++ b/configs/ctx_scl_k16_long_mha.yaml
@@ -3,26 +3,42 @@ defaults:
   - _model@_here_: k16
   - _trainer@_here_: context_scaling
   - _dataset@_here_: ctx_scl_dataset
-  - _checkpoints@_here_: none
+  - _checkpoints/context_scaling@_here_: shared
   - _misc@_here_: default
   - _eval@_here_: none
   - _self_
 
 common:
-  sequence_length: 512
-  batch_size: 32
+  sequence_length: 2048
+  batch_size: 64
+  kv_heads: 16
+  dff: 2560
 
 trainer:
   gradient_accumulation_steps: 1
-  n_steps: 101
-  learning_rate: 2e-3
-  eval_interval: 20
-  eval_long_ctx_interval: 20
+  n_steps: 320_001
+  ^learning_rate: [9, 10, 11]
+  # learning_rate: 10
+  eval_interval: 5000
+  eval_long_ctx_interval: 5000
+  n_eval_long_ctx_steps: 64
 
   checkpoint:
     save:
       type: nano
       # path: checkpoint
+
+  train_dataloader:
+    num_workers: 8
+    dataset:
+      load_dataset_fn:
+        path: ${cluster_switch.train_path_c4}
+
+  eval_dataloader:
+    num_workers: 8
+    dataset:
+      load_dataset_fn:
+        path: ${cluster_switch.eval_path_c4}
 
   eval_long_ctx_dataloader:
     num_workers: 8
@@ -33,15 +49,17 @@ trainer:
 
 infrastructure:
   metric_logger:
-    name: tiny_remote
+    heavy_metrics_calculation_interval: 5000
+    name: context_scaling
     tags:
       - nano
-      - remote
-      - tiny
+      - k16
       - context_scaling
-      - "1712"
+      - 42B
+      - qk_norm_rms
+      - MHA
 
   slurm:
-    time: "00:10:00"
-    gres: gpu:1
+    time: "48:00:00"
+    gres: gpu:4
     job-name: ${infrastructure.metric_logger.name}
