--- a/configs/ctx_scl_k16_long_mqa.yaml
+++ b/configs/ctx_scl_k16_long_mqa.yaml
@@ -17,7 +17,8 @@ common:
 trainer:
   gradient_accumulation_steps: 1
   n_steps: 320_001
-  ^learning_rate: [9, 10, 11]
+  ^learning_rate: [12, 13]
+  # ^learning_rate: [9, 10, 11]
   # learning_rate: 10
   eval_interval: 5000
   eval_long_ctx_interval: 5000
