--- a/configs/_model/smollm/base_pc_model.yaml
+++ b/configs/_model/smollm/base_pc_model.yaml
@@ -108,7 +108,7 @@ model:
       result_in_features: ${common.dmodel}
       result_out_features: null
       base_in_features: ${common.base_dmodel}
-      base_out_features: ${model.embedding.embedding.num_embeddings}
+      base_out_features: ${model.embedding.num_embeddings}
     norm_fn:
         _target_: src.core.model.RMSNorm
         _partial_: true
