--- a/configs/_misc/default.yaml
+++ b/configs/_misc/default.yaml
@@ -18,4 +18,20 @@ infrastructure:
 
   cemetery_experiments_dir: "~/llmrandom_cemetery"
 
+trainer:
+  checkpoint:
+    save:
+      type: nano
+      interval: -1
+      path: null
+      model_checkpoint_filename: __model_checkpoint_filename.pt
+      training_state_filename: __training_state_filename.pt
+
+    load:
+      type: nano
+      path: null
+      model_checkpoint_filename: __model_checkpoint_filename.pt
+      training_state_filename: null # not tested
+      only_weights: true # false not tested
+
 evaluator: null
