--- a/configs/pc_project/llama_1B_prune.yaml
+++ b/configs/pc_project/llama_1B_prune.yaml
@@ -1,8 +1,8 @@
 defaults:
-  - ../_cluster@_here_: entropy
+  - ../_cluster@_here_: local
   - ../_model@_here_: llama_3_1
   - ../_trainer@_here_: llama
-  - ../_dataset@_here_: fineweb
+  - ../_dataset@_here_: local_dummy
   - ../_checkpoints@_here_: none
   - ../_misc@_here_: default
 
@@ -24,9 +24,10 @@ common:
 trainer:
   gradient_accumulation_steps: 8
   # gradient_accumulation_steps: 4
-  ^n_steps: 
-    - 2048 # 1B tokens
-    # - 4096
+  n_steps: 4
+  # ^n_steps: 
+  #   - 3 # 1B tokens
+  #   # - 4096
     # - 6144
     # - 8192
     # - 12288
@@ -47,7 +48,8 @@ trainer:
     path: "meta-llama/Llama-3.2-1B" 
    save:  
     type: nano
-    path: ??? # CHANGE
+    path: "/net/scratch/hscra/plgrid/plgcrewtool/jakiestakie" #??? # CHANGE
+    interval: 2
 
 
 infrastructure:
@@ -74,6 +76,6 @@ infrastructure:
 apply_functions:
   - _target_: src.projected_compression.pruning.prune
     _partial_: true
-    dimensions_importances_path: ??? # CHANGE
+    dimensions_importances_path: "/net/scratch/hscra/plgrid/plgcrewtool/importances/1b/random_dimensions_importances.pt" # CHANGE
     target_dmodel: ${common.target_dmodel}
     target_dff: ${common.target_dff}
