--- a/configs/pc_project/llama_1B_importances.yaml
+++ b/configs/pc_project/llama_1B_importances.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - ../_cluster@_here_: local
+  - ../_cluster@_here_: entropy
   - ../_model@_here_: llama_3_1
   - ../_trainer@_here_: llama
   - ../_dataset@_here_: fineweb
@@ -24,7 +24,7 @@ trainer:
 
    save:
     type: nano
-    path: "/net/scratch/hscra/plgrid/plgcrewtool/importances/olol" # CHANGE
+    path: ??? # CHANGE
 
 
 infrastructure:
@@ -45,22 +45,22 @@ infrastructure:
 
 
 apply_functions:
-  # - _target_: src.projected_compression.weight_importances.dummy_importances
-  #   _partial_: true
-  #   dmodel: ${common.dmodel}
-  #   dff: ${common.dff}
-  #   n_blocks: ${model.encoder.n_blocks}
-  #   checkpoint_save_path: ${trainer.checkpoint.save.path}
-  # - _target_: src.projected_compression.weight_importances.minitron_importances
-  #   _partial_: true
-  #   dataloader: ${trainer.train_dataloader}
-  #   dmodel: ${common.dmodel}
-  #   dff: ${common.dff}
-  #   calibration_dataset_size: 8192 # nvidia used 2k steps of 4k sequence lenght - this is the saturaion poin - longer doesnt improve miningfully
-  #   seq_len: ${common.sequence_length}
-  #   total_batch_size: ${trainer.train_dataloader.total_batch_size}
-  #   n_blocks: ${model.encoder.n_blocks}
-  #   checkpoint_save_path: ${trainer.checkpoint.save.path}
+  - _target_: src.projected_compression.weight_importances.dummy_importances
+    _partial_: true
+    dmodel: ${common.dmodel}
+    dff: ${common.dff}
+    n_blocks: ${model.encoder.n_blocks}
+    checkpoint_save_path: ${trainer.checkpoint.save.path}
+  - _target_: src.projected_compression.weight_importances.minitron_importances
+    _partial_: true
+    dataloader: ${trainer.train_dataloader}
+    dmodel: ${common.dmodel}
+    dff: ${common.dff}
+    calibration_dataset_size: 8192 # nvidia used 2k steps of 4k sequence lenght - this is the saturaion poin - longer doesnt improve miningfully
+    seq_len: ${common.sequence_length}
+    total_batch_size: ${trainer.train_dataloader.total_batch_size}
+    n_blocks: ${model.encoder.n_blocks}
+    checkpoint_save_path: ${trainer.checkpoint.save.path}
   - _target_: src.projected_compression.weight_importances.magnitude_importances
     _partial_: true
     dmodel: ${common.dmodel}
